# observability

./: .env.example  .gitignore  .pre-commit-config.yaml  404.html  AGENTS.md  CHANGELOG.html  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.html  CONTRIBUTING.html  CONTRIBUTING.md  CONVENTIONS.md  GEMINI.md  LICENSE  LICENSE.html  Makefile  README.md  SECURITY.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml  styleguide.html  styleguide.md
.github/workflows/: docker-publish.yml  docs.yml  main.yml  owasp-zap.yml  pre-commit.yml  semantic-release.yml  sonarqube.yml  test.yml
apps/agent/: .env.example  Dockerfile  Makefile  README.md  langgraph.json  pyproject.toml
apps/agent/src/: __main__.py
apps/agent/src/observe_agent/: agent.py  app.py  mcp_types.py  settings.py
apps/api/: Dockerfile  Makefile  README.md  pyproject.toml
apps/api/src/: __main__.py
apps/api/src/observe_api/: __init__.py  app.py
apps/api/src/observe_api/config/: __init__.py  app_settings.py  config.py
apps/api/src/observe_api/routers/: api_router.py  routes.py
apps/api/tests/: app_test.py
apps/api/tests/config/: app_settings_test.py  custom_settings_test.py
apps/api/tests/routers/: api_router_test.py  routers_test.py
apps/front/: .env.example  .gitignore  Dockerfile  Makefile  README.md  next.config.ts  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
apps/front/app/: instructions.ts  layout.tsx  page.tsx
apps/front/app/api/copilotkit/: route.ts
apps/front/app/api/logs/: route.ts
apps/front/app/components/: CopilotActionHandler.tsx  MCPConfigForm.tsx  ToolCallRenderer.tsx
apps/front/app/components/mcp/: types.ts
apps/front/app/components/mcp/components/: AddEditServerModal.tsx  LogsPanel.tsx  ServerCard.tsx  ServerStats.tsx
apps/front/app/components/mcp/hooks/: useMCPLogs.ts
apps/front/app/hooks/: useLocalStorage.ts
apps/front/deploy/: nginx.conf
apps/mcp/: Makefile  README.md  pyproject.toml
apps/mcp/src/: __main__.py
apps/mcp/src/observe_mcp/: configure_app.py  settings.py  tools.py
assets/javascripts/: bundle.e71a0d61.min.js
cfg/: config.cfg
code/observe_me/: app.html
code/observe_me/config/: app_settings.html  config.html  custom_settings.html
code/observe_me/core/: info.html  logger_api.html
code/observe_me/core/security/: auth.html
code/observe_me/core/security/idp/: idp_adapter.html  idp_factory.html  keycloak_adapter.html
code/observe_me/routers/: api_router.html  routes.html
css/: material.css
docker/: Dockerfile  compose.yaml  config.yml  docker-compose.yml  grafana-dashboard.json  loki.yaml  loki.yml  otel-collector.yml  prometheus.yaml  prometheus.yml  tempo.yaml
docker/conf-services/: otel-collector.yaml  prometheus.yml
docker/grafana/provisioning/datasources/: datasources.yaml
docs/: .pages  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  styleguide.md
docs/code/: .pages
docs/code/observe_me/: .pages  app.md
docs/code/observe_me/config/: .pages  app_settings.md  config.md  custom_settings.md
docs/code/observe_me/core/: .pages  info.md  logger_api.md
docs/code/observe_me/core/security/: .pages  auth.md
docs/code/observe_me/core/security/idp/: .pages  idp_adapter.md  idp_factory.md  keycloak_adapter.md
docs/code/observe_me/routers/: .pages  api_router.md  routes.md
infra/: compose.yaml  prometheus.yaml
infra/grafana/: grafana-dashboard.json  grafana-datasources.json
libs/observe_core/: Makefile  README.md  pyproject.toml
libs/observe_core/src/observe_core/: __init__.py  context.py  custom_settings.py  headers.py  info.py  logger_api.py
libs/observe_core/src/observe_core/security/: __init__.py  auth.py  session.py
libs/observe_core/src/observe_core/security/idp/: __init__.py  idp_factory.py  keycloak_adapter.py
libs/observe_core/tests/: info_test.py  logger_api_test.py  test_context.py  test_custom_settings.py  test_headers.py
libs/observe_core/tests/security/: auth_test.py  session_test.py
make/: build.mk  docker-compose.mk  docker.mk  docs.mk  profiling.mk  qa.mk  run.mk  settings.mk  setup.mk
search/: search_index.js  search_index.json
src/: __main__.py
src/observe_me/: __init__.py  app.py  telemetry.py
src/observe_me/config/: __init__.py  app_settings.py  config.py  custom_settings.py
src/observe_me/core/: __init__.py  info.py  logger_api.py
src/observe_me/core/security/: auth.py
src/observe_me/core/security/idp/: idp_adapter.py  idp_factory.py  keycloak_adapter.py
src/observe_me/routers/: __init__.py  api_router.py  routes.py
tests/observe_me/: app_test.py
tests/observe_me/config/: app_settings_test.py  custom_settings_test.py
tests/observe_me/core/: info_test.py  logger_api_test.py
tests/observe_me/core/security/: auth_test.py
tests/observe_me/routers/: api_router_test.py  routers_test.py
