[project]
name = "agent"
version = "0.1.0"
dependencies = [
  "observe-core",
  "langchain",
  "openai",
  "copilotkit",
  "langgraph",
  "pydantic_settings",
  "langchain-openai",
  "langchain-mcp-adapters",
  "langgraph-cli[backend,inmem]",
  "langgraph-sdk>=0.4.2",
]

[tool.uv.sources]
observe-core = { path = "../../libs/observe_core", editable = false }

[tool.setuptools.packages.find]
where = ["src"]

# O si usas hatchling (muy común con uv):
[tool.hatch.build.targets.wheel]
packages = ["src/observe_agent"]



[dependency-groups]
dev = [
    "pre-commit==4.5.1",
    "pyrefly==0.47.0",
    "pytest==9.0.2",
    "pytest-asyncio==1.3.0",
    "pytest-cookies==0.7.0",
    "pytest-cov==7.0.0",
    "pytest-xdist==3.8.0",
    "ruff==0.14.11",
    "ty==0.0.10",
    "python-semantic-release>=10.5.2",
    "nodejs>=0.1.1", # required for pyright
    "pyright>=1.1.400",
    "build",
    "twine",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
pythonpath = ["src"]
addopts = [
    "-n",
    "auto",
    "--cov=src",
    "--cov-report=xml",
    "--cov-report=json",
    "--cov-report=html",
    "--cov-report=term-missing",
]
markers = ["slow: marks tests as slow (deselect with '-m \"not slow\"')"]
python_files = "test_*.py tests_*.py *_test.py"
python_classes = "*Test Test* Describe*"
python_functions = "test_* it_* should_* scenario_*"

[tool.coverage.run]
omit = [
    "src/__main__.py",
]

[tool.coverage.report]
fail_under = 80          # número entero o float (ej: 85.5)
precision = 2            # cuántos decimales mostrar
