[project]
name = "observe-core"
version = "0.1.0"
dependencies = [
    "pydantic>=2.10.6",
    "pydantic-settings>=2.12.0",
    "python-keycloak>=5.3.0",
    "fastapi>=0.115.12",
    "rich >=14.1.0",
    "psutil>=7.0.0",
    "py-cpuinfo>=9.0.0",
    "prometheus-fastapi-instrumentator>=7.1.0",
    "pyjwt>=2.12.1",
    "aws-opentelemetry-distro>=0.10.1",
    "opentelemetry-exporter-otlp>=1.25,<2",
    "opentelemetry-sdk",
]


[dependency-groups]
dev = [
    "pre-commit==4.5.1",
    "pyrefly==0.47.0",
    "pytest==9.0.2",
    "pytest-asyncio==1.3.0",
    "pytest-cookies==0.7.0",
    "pytest-cov==7.0.0",
    "pytest-xdist==3.8.0",
    "ruff==0.14.11",
    "ty==0.0.10",
    "python-semantic-release>=10.5.2",
    "nodejs>=0.1.1", # required for pyright
    "pyright>=1.1.400",
    "build",
    "twine",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
pythonpath = ["src"]
addopts = [
    "-n",
    "auto",
    "--cov=src",
    "--cov-report=xml",
    "--cov-report=json",
    "--cov-report=html",
    "--cov-report=term-missing",
]
markers = ["slow: marks tests as slow (deselect with '-m \"not slow\"')"]
python_files = "test_*.py tests_*.py *_test.py"
python_classes = "*Test Test* Describe*"
python_functions = "test_* it_* should_* scenario_*"

[tool.coverage.run]
omit = [
    "src/__main__.py",
]

[tool.coverage.report]
fail_under = 80          # número entero o float (ej: 85.5)
precision = 2            # cuántos decimales mostrar
